Ya está lo básico puesto, el splash screen tiene un fallo raro pero se puede arreglar y el login está funcionando normal

--- a/Expoandes/app/src/main/res/values/strings.xml
+++ b/Expoandes/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="prefs_file">com.example.nav_botones.PREFERENCE_FILE_KEY</string>
 </resources>
