Ya se ven los elementos del home correctamente, solo hay texto pero en teoría aún se pueden poner imágenes. Cada vez que se presiona uno de los elementos, se quita de la  parte general de cosas y se añade a la de prestamos en el correo de quien le haya dado clic. Luego se pueden poner esos elementos en el perfil de la persona para que vea que tiene prestado en el momento.

--- a/Expoandes/app/src/main/res/values/strings.xml
+++ b/Expoandes/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Mingle</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Inicio</string>
+    <string name="title_dashboard">Perfil</string>
+    <string name="title_notifications">Notificationes</string>
 
     <string name="prefs_file">com.example.expoandes.PREFERENCE_FILE_KEY</string>
 </resources>
