--- a/Expoandes/app/src/main/res/values/strings.xml
+++ b/Expoandes/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Mingle</string>
+    <string name="app_name">Mingle™</string>
     <string name="title_home">Inicio</string>
     <string name="title_dashboard">Perfil</string>
     <string name="title_notifications">Notificationes</string>
